--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,17 @@
-<div class="">
 
-    <h1>Mis noticias</h1>
-    <hr>
-
-  
-    <button class="btn btn-outline-danger"
-            (click)="salir()">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Mis noticias</a>
+    
+    <button class="btn btn-outline-danger" (click)="salir()">
       Salir
     </button>
-
-
-
-    <app-noticias [noticias]="noticias"></app-noticias>
-
-  
   </div>
+</nav>
+
+<app-noticias [noticias]="noticias"></app-noticias>
+
+
