--- a/src/app/components/noticias/noticia/noticia.component.html
+++ b/src/app/components/noticias/noticia/noticia.component.html
@@ -1,4 +1,4 @@
-  <div class="card" style="width: 18rem;">
+  <!-- <div class="card" style="width: 18rem;">
     <img class="card-img-top" [src]="noticia.urlToImage" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{ noticia.title }} </h5>
@@ -7,4 +7,23 @@
       </p>
       <a [href]="noticia.url" target="_blank" class="btn btn-primary">Ver mas</a>
     </div>
-  </div>
+  </div> -->
+
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title class="nowrap">{{ noticia.title }}</mat-card-title>
+      <mat-card-subtitle>{{ noticia.source.name }}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="noticia.urlToImage" alt="Portada de noticia">
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <a [href]="noticia.url" target="_blank" mat-button>Conocer mas...</a>
+    </mat-card-actions>
+  </mat-card>
